@@ -1,35 +1,51 @@
 lazy val sparkVersion = "2.4.0"
 
+lazy val projectVersion = "0.1.0-SNAPSHOT"
+
 lazy val root = (project in file("."))
   .configs(IntegrationTest)
   .settings(
-    name := "Clean Frames",
-    version := "0.1.0-SNAPSHOT",
+    name := "clean-frames",
+    version := projectVersion,
     organization := "io.funkyminds",
     scalaVersion := "2.11.12",
-    crossScalaVersions := Seq("2.11.12", "2.12.8"),
+    crossScalaVersions := {
+      if (sparkVersion >= "2.3.0") {
+        Seq("2.11.12")
+      } else {
+        Seq("2.10.6", "2.11.12")
+      }
+    },
     scalacOptions ++= Seq(
-      "-target:jvm-1.8",
       "-Xfatal-warnings",
-      "-language:higherKinds",
+      "-language:higherKinds,implicitConversions",
       "-unchecked",
       "-deprecation",
-      "-feature",
-      "-language:implicitConversions"
+      "-feature"
     ),
-    javacOptions ++= Seq(
-      "-source", "1.8",
-      "-target", "1.8"
-    ),
+    javacOptions ++= {
+      val ver = if (sparkVersion >= "2.1.1") "1.8" else "1.7"
+
+      Seq(
+        "-source", ver,
+        "-target", ver,
+        "-Xms2G",
+        "-Xmx2G",
+        "-XX:MaxPermSize=2048M",
+        "-XX:+CMSClassUnloadingEnabled"
+      )
+    },
     Defaults.itSettings,
     libraryDependencies ++= Seq(
+      "com.chuusai" %% "shapeless" % "2.3.3",
       "org.apache.spark" %% "spark-core" % sparkVersion % Provided,
       "org.apache.spark" %% "spark-sql" % sparkVersion % Provided,
-      "com.holdenkarau" %% "spark-testing-base" % {sparkVersion + "_0.11.0"} % Test,
       "org.apache.spark" %% "spark-hive" % sparkVersion % Test,
-      "com.chuusai" %% "shapeless" % "2.3.3",
+      "com.holdenkarau" %% "spark-testing-base" % {sparkVersion + "_0.11.0"} % Test,
       "org.scalatest" %% "scalatest" % "3.0.5" % "test,it"
     ),
     parallelExecution in Test := false,
-    fork := true
+    fork := true,
+    sparkComponents := Seq("core", "sql", "hive"),
+    publishMavenStyle := true
   )
